<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello pervert, please sign in…</string>
    <string name="app_name">Pervler</string>
    <string name="recordButton">Eavesdrop…</string>
    <string name="registration">New To Pervler? Register Here.</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="username">username</string>
</resources>
